# nexus_4wd_mecanum_simulator

./: README.md
nexus_4wd_mecanum_description/: CMakeLists.txt  package.xml  urdf.rviz
nexus_4wd_mecanum_description/launch/: nexus_4wd_mecanum_description.launch  nexus_4wd_mecanum_rviz.launch
nexus_4wd_mecanum_description/meshes/: mecanum_wheel_left.STL  mecanum_wheel_right.STL  nexus_base_link.STL  nexus_base_link_collision.STL  urm04.STL  wheel_shaft.STL
nexus_4wd_mecanum_description/urdf/: nexus_4wd_mecanum.gazebo  nexus_4wd_mecanum.xacro  test.urdf  urm04_sensor.gazebo  urm04_sensor.xacro
nexus_4wd_mecanum_gazebo/: CMakeLists.txt  package.xml
nexus_4wd_mecanum_gazebo/include/nexus_4wd_mecanum_gazebo/: nexus_ros_force_based_move.h
nexus_4wd_mecanum_gazebo/launch/: nexus_4wd_mecanum_multi.launch  nexus_4wd_mecanum_world.launch  spawn_one_nexus_4wd_mecanum.launch
nexus_4wd_mecanum_gazebo/src/: nexus_ros_force_based_move.cpp
