<?xml version="1.0"?>
<package format="2">
  <name>nexus_4wd_mecanum_gazebo</name>
  <version>0.1.0</version>
  <description>The package for the Gazebo plugins and worlds of the nexus 4WD mecanum robot.</description>

  <author email="r-baran@hotmail.fr">Robin Baran</author>
  <maintainer email="r-baran@hotmail.fr">Robin Baran</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo-dev</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
